When WebProcess is slow to respond to IPC, that's mistakenly reported as crash https://bugs.webkit.org/show_bug.cgi?id=140218

Reviewed by Darin Adler.

* Scripts/webkitpy/port/driver.py:
(Driver.__init__): Removed _subprocess_was_unresponsive that was a modifier for
"process crashed" condition. These don't make sense together - it's either a crash
or a timeout, and we should detect those properly at a much lower level.
(Driver.run_test): Ditto.
(Driver._check_for_driver_crash_or_unresponsiveness): Split crash and unresponsiveness
cases.

* WebKitTestRunner/TestController.h:
* WebKitTestRunner/TestController.cpp:
(WTR::TestController::webProcessName):
(WTR::TestController::processDidCrash):
Factored out hardcoded child process names, as we now use these in two places.

* WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::dumpWebProcessUnresponsiveness): Dump an accurate child
process name, so that it can be sampled (fixes sampling on Mavericks and above).



Canonical link: https://commits.webkit.org/158213@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@178116 268f45cc-cd09-0410-ab3c-d52691b4dbfc